<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_weight="5"
        android:orientation="vertical">



        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:ems="10"
            android:inputType="phone"
            android:singleLine="true"
            android:textSize="40dp"
            android:gravity="center"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/colorButtonNumText"
            android:background="@null">

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginHorizontal="50dp"
        android:layout_marginBottom="60dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <LinearLayout
                    android:id="@+id/btn_1"
                    android:contentDescription="@string/one"
                    style="@style/ButtonNumTheme">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/one"
                        android:textSize="30dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/empty"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_2"
                    android:contentDescription="@string/two"
                    style="@style/ButtonNumTheme">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/two"
                        android:textSize="30dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/abc"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_3"
                    android:contentDescription="@string/three"
                    style="@style/ButtonNumTheme">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/three"
                        android:textSize="30dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/def"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <LinearLayout
                    android:id="@+id/btn_4"
                    android:contentDescription="@string/four"
                    style="@style/ButtonNumTheme">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/four"
                        android:textSize="30dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ghi"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_5"
                    android:contentDescription="@string/five"
                    style="@style/ButtonNumTheme">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/five"
                        android:textSize="30dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jkl"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_6"
                    android:contentDescription="@string/six"
                    style="@style/ButtonNumTheme">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/six"
                        android:textSize="30dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mno"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <LinearLayout
                    android:id="@+id/btn_7"
                    android:contentDescription="@string/seven"
                    style="@style/ButtonNumTheme">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/seven"
                        android:textSize="30dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pqrs"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_8"
                    android:contentDescription="@string/eight"
                    style="@style/ButtonNumTheme">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/eight"
                        android:textSize="30dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tuv"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_9"
                    android:contentDescription="@string/nine"
                    style="@style/ButtonNumTheme">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nine"
                        android:textSize="30dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wxyz"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <LinearLayout
                    android:id="@+id/btn_star"
                    android:contentDescription="@string/star"
                    style="@style/ButtonNumTheme">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/star"
                        android:textSize="30dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/empty"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_0"
                    android:contentDescription="@string/zero"
                    style="@style/ButtonNumTheme">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:textSize="30dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/plus"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_sharp"
                    android:contentDescription="@string/sharp"
                    style="@style/ButtonNumTheme">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sharp"
                        android:textSize="30dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/empty"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btn_chat"
                style="@style/f1_img_btn_style"
                android:src="@drawable/ic_action_chat" />

            <ImageButton
                android:id="@+id/btn_call"
                style="@style/f1_img_btn_style"
                android:src="@drawable/button_call_f1" />

            <ImageButton
                android:id="@+id/btn_delete"
                style="@style/f1_img_btn_style"
                android:src="@drawable/ic_action_backspace"
                />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>
